README for assignments-tasks description

--- a/assignments/assignment03-pie.ipynb
+++ b/assignments/assignment03-pie.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "2               Copy  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -231,98 +231,98 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>475</th>\n",
-       "      <td>476</td>\n",
-       "      <td>24ffE1aefa66372</td>\n",
-       "      <td>Candice</td>\n",
-       "      <td>Cervantes</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>fpowell@example.net</td>\n",
-       "      <td>(021)972-2970x7765</td>\n",
-       "      <td>1978-03-04</td>\n",
-       "      <td>Chartered certified accountant</td>\n",
+       "      <th>185</th>\n",
+       "      <td>186</td>\n",
+       "      <td>108773b6Ba4Dbdb</td>\n",
+       "      <td>Bradley</td>\n",
+       "      <td>Copeland</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>waltonleonard@example.net</td>\n",
+       "      <td>046-790-3722x3553</td>\n",
+       "      <td>1984-04-05</td>\n",
+       "      <td>Engineer, aeronautical</td>\n",
        "      <td>example.net</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>550</th>\n",
-       "      <td>551</td>\n",
-       "      <td>6da0A79eB0aAF5c</td>\n",
-       "      <td>Rebecca</td>\n",
-       "      <td>Castillo</td>\n",
+       "      <th>734</th>\n",
+       "      <td>735</td>\n",
+       "      <td>9BF53D7DcabdAA7</td>\n",
+       "      <td>Leonard</td>\n",
+       "      <td>Wallace</td>\n",
        "      <td>Female</td>\n",
-       "      <td>parksseth@example.net</td>\n",
-       "      <td>001-702-861-2892x431</td>\n",
-       "      <td>1935-02-14</td>\n",
-       "      <td>Sports therapist</td>\n",
-       "      <td>example.net</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>812</th>\n",
-       "      <td>813</td>\n",
-       "      <td>d0Fd08CEbA41c09</td>\n",
-       "      <td>Rebekah</td>\n",
-       "      <td>Koch</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>livingstonrandy@example.com</td>\n",
-       "      <td>754-427-9326</td>\n",
-       "      <td>1929-08-10</td>\n",
-       "      <td>Television production assistant</td>\n",
+       "      <td>knightmiguel@example.com</td>\n",
+       "      <td>+1-625-761-5927x0104</td>\n",
+       "      <td>2012-08-25</td>\n",
+       "      <td>Chemist, analytical</td>\n",
        "      <td>example.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>854</th>\n",
-       "      <td>855</td>\n",
-       "      <td>5BAA7F0Bf70A588</td>\n",
-       "      <td>Kristi</td>\n",
-       "      <td>Orr</td>\n",
+       "      <th>249</th>\n",
+       "      <td>250</td>\n",
+       "      <td>0ae5987cCC3EbcB</td>\n",
+       "      <td>Jacqueline</td>\n",
+       "      <td>Harper</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>henry51@example.net</td>\n",
+       "      <td>1301630752</td>\n",
+       "      <td>1938-01-03</td>\n",
+       "      <td>Insurance underwriter</td>\n",
+       "      <td>example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>503</th>\n",
+       "      <td>504</td>\n",
+       "      <td>45C1d78d93BFa96</td>\n",
+       "      <td>Carmen</td>\n",
+       "      <td>Irwin</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>ian16@example.net</td>\n",
+       "      <td>106-472-7738x517</td>\n",
+       "      <td>1993-07-05</td>\n",
+       "      <td>Librarian, academic</td>\n",
+       "      <td>example.net</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>914</th>\n",
+       "      <td>915</td>\n",
+       "      <td>a1Bec1eAd03bCAf</td>\n",
+       "      <td>Christina</td>\n",
+       "      <td>Walters</td>\n",
        "      <td>Female</td>\n",
-       "      <td>ashley82@example.org</td>\n",
-       "      <td>(830)679-1944</td>\n",
-       "      <td>1948-04-21</td>\n",
-       "      <td>Quality manager</td>\n",
+       "      <td>gamblebeth@example.org</td>\n",
+       "      <td>711-330-8727x8347</td>\n",
+       "      <td>1917-02-11</td>\n",
+       "      <td>Commissioning editor</td>\n",
        "      <td>example.org</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>859</th>\n",
-       "      <td>860</td>\n",
-       "      <td>f4c82B1EDBe3a19</td>\n",
-       "      <td>Ricardo</td>\n",
-       "      <td>Washington</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>wlester@example.com</td>\n",
-       "      <td>710-080-9153</td>\n",
-       "      <td>1973-07-12</td>\n",
-       "      <td>Computer games developer</td>\n",
-       "      <td>example.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Index          User Id First Name   Last Name     Sex  \\\n",
-       "475    476  24ffE1aefa66372    Candice   Cervantes    Male   \n",
-       "550    551  6da0A79eB0aAF5c    Rebecca    Castillo  Female   \n",
-       "812    813  d0Fd08CEbA41c09    Rebekah        Koch  Female   \n",
-       "854    855  5BAA7F0Bf70A588     Kristi         Orr  Female   \n",
-       "859    860  f4c82B1EDBe3a19    Ricardo  Washington    Male   \n",
+       "     Index          User Id  First Name Last Name     Sex  \\\n",
+       "185    186  108773b6Ba4Dbdb     Bradley  Copeland  Female   \n",
+       "734    735  9BF53D7DcabdAA7     Leonard   Wallace  Female   \n",
+       "249    250  0ae5987cCC3EbcB  Jacqueline    Harper    Male   \n",
+       "503    504  45C1d78d93BFa96      Carmen     Irwin    Male   \n",
+       "914    915  a1Bec1eAd03bCAf   Christina   Walters  Female   \n",
        "\n",
-       "                           Email                 Phone Date of birth  \\\n",
-       "475          fpowell@example.net    (021)972-2970x7765    1978-03-04   \n",
-       "550        parksseth@example.net  001-702-861-2892x431    1935-02-14   \n",
-       "812  livingstonrandy@example.com          754-427-9326    1929-08-10   \n",
-       "854         ashley82@example.org         (830)679-1944    1948-04-21   \n",
-       "859          wlester@example.com          710-080-9153    1973-07-12   \n",
+       "                         Email                 Phone Date of birth  \\\n",
+       "185  waltonleonard@example.net     046-790-3722x3553    1984-04-05   \n",
+       "734   knightmiguel@example.com  +1-625-761-5927x0104    2012-08-25   \n",
+       "249        henry51@example.net            1301630752    1938-01-03   \n",
+       "503          ian16@example.net      106-472-7738x517    1993-07-05   \n",
+       "914     gamblebeth@example.org     711-330-8727x8347    1917-02-11   \n",
        "\n",
-       "                           Job Title       domain  \n",
-       "475   Chartered certified accountant  example.net  \n",
-       "550                 Sports therapist  example.net  \n",
-       "812  Television production assistant  example.com  \n",
-       "854                  Quality manager  example.org  \n",
-       "859         Computer games developer  example.com  "
+       "                  Job Title       domain  \n",
+       "185  Engineer, aeronautical  example.net  \n",
+       "734     Chemist, analytical  example.com  \n",
+       "249   Insurance underwriter  example.net  \n",
+       "503     Librarian, academic  example.net  \n",
+       "914    Commissioning editor  example.org  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
