Project description, source description, links to libraries

--- a/project/Wind_analisys.ipynb
+++ b/project/Wind_analisys.ipynb
@@ -4,56 +4,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.met.ie/climate/available-data/daily-data \n",
-    "https://en.wikipedia.org/wiki/Met_%C3%89ireann\n",
-    "https://data.gov.ie/organization/meteireann?q=daily+data&sort=score+desc%2C+metadata_modified+desc"
+    "***\n",
+    "\n",
+    "<div style=\"text-align: center; color: purple;\">\n",
+    "  <h1>The project: \"Wind Speed Analysis around the Ireland with a view to Wind Farm\"</h1>\n",
+    "</div>\n",
+    "\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### My attempts to look at the picture globally and make further decisions "
+    "## Project Description\n",
+    "\n",
+    "This project involves analyzing wind speed data across Ireland to assess the potential for wind farm installations. We are using historical weather data from the sources of [Met Éireann](https://www.met.ie/). The analysis involves data cleaning and normalization to ensure accuracy and reliability. \n",
+    "The key questions to explore include:\n",
+    "\n",
+    "**Wind Power Potential by Location**:\n",
+    "\n",
+    "- Evaluating the average wind speed over different timeframes (hourly, daily, monthly, annually).\n",
+    "- Considering operational wind speed ranges for turbines to estimate when and where wind farms could generate power effectively.\n",
+    "\n",
+    "**Trends in Wind Speed Over Time**:\n",
+    "\n",
+    "- Examining long-term trends in wind speed data to predict future patterns, assessing if wind speeds are likely to remain consistent or change over the next decade.\n",
+    "\n",
+    "**Seasonal and Temporal Patterns**:\n",
+    "\n",
+    "- Identifying seasonal and daily variations in wind speeds to determine optimal times for energy production.\n",
+    "\n",
+    "**Exploration of Other Weather Metrics**:\n",
+    "\n",
+    "- Investigate additional factors such as rainfall or temperature that might influence wind speed.\n",
+    "\n",
+    "**Forecasting Wind Farm Output**:\n",
+    "\n",
+    "- Using weather forecasts, estimate wind farm power output for the coming week, integrating turbine efficiency and location data.\n",
+    "\n",
+    "**Insights**:\n",
+    "\n",
+    "- Explore factors influencing the viability and performance of wind farms in Ireland."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Athenry: 1875\n",
-    "2. Ballyhaise: 675\n",
-    "3. Belmullet: 2375\n",
-    "4. Casement: 3723\n",
-    "5. Claremorris: 2175\n",
-    "6. Cork Airport: 3904\n",
-    "7. Dublin Airport: 532\n",
-    "8. Dunsany: 1375\n",
-    "9. Finner: 2075\n",
-    "10. Gurteen: 1475\n",
-    "11. Johnstown Castle: 1775\n",
-    "12. Knock Airport: 4935\n",
-    "13. Malin Head: 1575\n",
-    "14. Mace Head: 275\n",
-    "15. Markree Castle: 1275\n",
-    "16. Moore Park: 575\n",
-    "17. Mount Dillon: 1975\n",
-    "18. Mullingar: 875\n",
-    "19. Newport: 1175\n",
-    "20. Oak Park: 375\n",
-    "21. Phoenix Park: 175\n",
-    "22. Roches Point: 1075\n",
-    "23. Shannon Airport: 518\n",
-    "24. Sherkin Island: 775\n",
-    "25. Valentia Observatory: 2275"
+    "***\n",
+    "\n",
+    "## Data Source Exploration\n",
+    "\n",
+    "For this project, I conducted research to locate reliable sources of historical weather data for analysis. The following resources were used to gather daily climate and wind speed data:  \n",
+    "\n",
+    "- **[Met Éireann Daily Data](https://www.met.ie/climate/available-data/daily-data)**: A trusted source providing detailed historical weather records across Ireland.  \n",
+    "- **[Met Éireann Wikipedia Entry](https://en.wikipedia.org/wiki/Met_%C3%89ireann)**: Used to gain an overview of the organization and its data offerings.  \n",
+    "- **[Irish Open Data Portal - Met Éireann](https://data.gov.ie/organization/meteireann?q=daily+data&sort=score+desc%2C+metadata_modified+desc)**: An open-access repository featuring datasets and metadata for climate and weather research in Ireland.  \n",
+    "\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import libraries\n",
+    "\n",
+    "- [Pandas](https://pandas.pydata.org/docs/)\n",
+    "- [Numpy](https://numpy.org/doc/stable/reference/index.html#reference)\n",
+    "- [Requests: HTTP for Humans™](https://requests.readthedocs.io/en/latest/)\n",
+    "- [io — Core tools for working with streams](https://docs.python.org/3/library/io.html)\n",
+    "- [os — Miscellaneous operating system interfaces](https://docs.python.org/3/library/os.html)\n",
+    "- [Matplotlib](https://matplotlib.org/stable/contents.html)\n",
+    "- [Seaborn: statistical data visualization](https://seaborn.pydata.org/#seaborn-statistical-data-visualization)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import requests\n",
     "from io import StringIO\n",
     "import os\n",
