Image added to the projct, beginning of the process description

--- a/project/Wind_analisys.ipynb
+++ b/project/Wind_analisys.ipynb
@@ -17,6 +17,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![File:Wind farm at sunset.jpg](https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Wind_farm_at_sunset.jpg/800px-Wind_farm_at_sunset.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Project Description\n",
     "\n",
     "This project involves analyzing wind speed data across Ireland to assess the potential for wind farm installations. We are using historical weather data from the sources of [Met Éireann](https://www.met.ie/). The analysis involves data cleaning and normalization to ensure accuracy and reliability. \n",
@@ -98,6 +105,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## Selection of Data for Analysis\n",
+    "\n",
+    "Based on my research and exploration of available data sources, I decided to take a broader approach and conduct an overall analysis of the current weather stations in Ireland and their corresponding data availability. This decision was made to gain a comprehensive understanding of the wind speed variability and its distribution over time. By focusing on these stations, I aim to explore how wind speeds fluctuate across the country, providing a solid foundation for further analysis of wind patterns and trends. This will help shape the direction of my future analyses, enabling more detailed assessments of wind energy potential in Ireland."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -129,6 +147,14 @@
     "    \"Sherkin Island\": 775,\n",
     "    \"Valentia Observatory\": 2275\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "I based my analysis on a base URL for fetching data from various weather stations in Ireland. Using a Python script, I was able to retrieve the relevant data by looping through a list of station names and their respective IDs. The script downloads weather data for each station, skips unnecessary rows, and saves the data into separate CSV files for each station. This process allows for a structured collection of wind speed and other weather parameters across multiple stations, providing a solid foundation for further analysis of wind speed distribution and variability over time."
    ]
   },
   {
@@ -198,15 +224,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. date:  -  00 to 00 utc\n",
-    "2. rain:  -  Precipitation Amount (mm)\n",
-    "3. maxtp: -  Maximum Air Temperature (C)\t \n",
-    "4. mintp: -  Minimum  Air Temperature (C)\n",
-    "5. cbl:   -  Mean CBL Pressure (hpa)\n",
-    "6. wdsp:  -  Mean Wind Speed (kt)\n",
-    "7. hm:    -  Highest ten minute mean wind speed (kt)\t\t              \n",
-    "8. ddhm:  -  Wind Direction at max 10 min mean (deg)                  \n",
-    "9. hg:    -  Highest Gust (kt)"
+    "After downloading the data, I reviewed the contents, which revealed that the datasets contained varying numbers of columns across different stations. Despite this, most of the data points were consistent across the stations, allowing for the potential to combine the relevant variables for analysis. As a result, I merged the useful variables, such as wind speed, temperature, and other key weather parameters, into a single dataset, enabling a more comprehensive analysis across all the stations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Weather Data Variables**:\n",
+    "\n",
+    "1. **date**:  -  00 to 00 utc\n",
+    "2. **rain**:  -  Precipitation Amount (mm)\n",
+    "3. **maxtp**: -  Maximum Air Temperature (C)\t \n",
+    "4. **mintp**: -  Minimum  Air Temperature (C)\n",
+    "5. **cbl**:   -  Mean CBL Pressure (hpa)\n",
+    "6. **wdsp**:  -  Mean Wind Speed (kt)\n",
+    "7. **hm**:    -  Highest ten minute mean wind speed (kt)\t\t              \n",
+    "8. **ddhm**:  -  Wind Direction at max 10 min mean (deg)                  \n",
+    "9. **hg**:    -  Highest Gust (kt)"
    ]
   },
   {
@@ -217,6 +252,13 @@
    "source": [
     "# Define the columns of interest\n",
     "columns_of_interest = ['date', 'maxtp', 'mintp', 'rain', 'cbl', 'wdsp', 'hm', 'ddhm', 'hg']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After selecting the relevant columns, the data was combined into a single file, with additional columns added for the station name and its ID."
    ]
   },
   {
@@ -266,8 +308,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a consolidated dataset, we can begin exploring and analyzing it using appropriate tools to understand its structure, assess data completeness, and derive overall comparative statistics."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -401,13 +450,16 @@
     }
    ],
    "source": [
+    "# Load the combined dataset into a Pandas DataFrame\n",
     "df_all = pd.read_csv(\"All_stations_data.csv\", low_memory=False, date_format = 'mixed', parse_dates=['date'])\n",
+    "\n",
+    "# Show\n",
     "df_all.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +477,7 @@
    ],
    "source": [
     "\n",
-    " # [Knot (unit)](https://en.wikipedia.org/wiki/Knot_(unit))\n",
+    "# [Knot (unit)](https://en.wikipedia.org/wiki/Knot_(unit))\n",
     "\n",
     "df_all['wdsp'] = df_all['wdsp'] * 0.514444  # Convert wind speed from knots to m/s\n",
     "\n",
