--- a/project/Wind_analisys.ipynb
+++ b/project/Wind_analisys.ipynb
@@ -95,9 +95,6 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import requests\n",
-    "from io import StringIO\n",
-    "import os\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "# Choose the style.\n",
@@ -117,108 +114,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Dictionary of station names and IDs\n",
-    "stations = {\n",
-    "    \"Athenry\": 1875,\n",
-    "    \"Ballyhaise\": 675,\n",
-    "    \"Belmullet\": 2375,\n",
-    "    \"Casement\": 3723,\n",
-    "    \"Claremorris\": 2175,\n",
-    "    \"Cork Airport\": 3904,\n",
-    "    \"Dublin Airport\": 532,\n",
-    "    \"Dunsany\": 1375,\n",
-    "    \"Finner\": 2075,\n",
-    "    \"Gurteen\": 1475,\n",
-    "    \"Johnstown Castle\": 1775,\n",
-    "    \"Knock Airport\": 4935,\n",
-    "    \"Malin Head\": 1575,\n",
-    "    \"Mace Head\": 275,\n",
-    "    \"Moore Park\": 575,\n",
-    "    \"Mount Dillon\": 1975,\n",
-    "    \"Mullingar\": 875,\n",
-    "    \"Newport\": 1175,\n",
-    "    \"Oak Park\": 375,\n",
-    "    \"Roches Point\": 1075,\n",
-    "    \"Shannon Airport\": 518,\n",
-    "    \"Sherkin Island\": 775,\n",
-    "    \"Valentia Observatory\": 2275\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
     "I based my analysis on a base URL for fetching data from various weather stations in Ireland. Using a Python script, I was able to retrieve the relevant data by looping through a list of station names and their respective IDs. The script downloads weather data for each station, skips unnecessary rows, and saves the data into separate CSV files for each station. This process allows for a structured collection of wind speed and other weather parameters across multiple stations, providing a solid foundation for further analysis of wind speed distribution and variability over time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1875.csv for station: Athenry (ID: 1875)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly675.csv for station: Ballyhaise (ID: 675)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly2375.csv for station: Belmullet (ID: 2375)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly3723.csv for station: Casement (ID: 3723)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly2175.csv for station: Claremorris (ID: 2175)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly3904.csv for station: Cork Airport (ID: 3904)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly532.csv for station: Dublin Airport (ID: 532)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1375.csv for station: Dunsany (ID: 1375)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly2075.csv for station: Finner (ID: 2075)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1475.csv for station: Gurteen (ID: 1475)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1775.csv for station: Johnstown Castle (ID: 1775)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly4935.csv for station: Knock Airport (ID: 4935)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1575.csv for station: Malin Head (ID: 1575)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly275.csv for station: Mace Head (ID: 275)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly575.csv for station: Moore Park (ID: 575)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1975.csv for station: Mount Dillon (ID: 1975)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly875.csv for station: Mullingar (ID: 875)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1175.csv for station: Newport (ID: 1175)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly375.csv for station: Oak Park (ID: 375)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly1075.csv for station: Roches Point (ID: 1075)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly518.csv for station: Shannon Airport (ID: 518)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly775.csv for station: Sherkin Island (ID: 775)...\n",
-      "Fetching data from https://cli.fusio.net/cli/climate_data/webdata/dly2275.csv for station: Valentia Observatory (ID: 2275)...\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Base URL\n",
-    "base_url = \"https://cli.fusio.net/cli/climate_data/webdata/dly{}.csv\"\n",
-    "\n",
-    "# Folder to store data\n",
-    "data_folder = \"Data\"\n",
-    "os.makedirs(data_folder, exist_ok=True)\n",
-    "\n",
-    "# Loop to fetch and save data\n",
-    "for station_name, station_id in stations.items():\n",
-    "    url = base_url.format(station_id)\n",
-    "    print(f\"Fetching data from {url} for station: {station_name} (ID: {station_id})...\")\n",
-    "\n",
-    "    try:\n",
-    "        # Download the data, skipping the first 24 rows\n",
-    "        response = requests.get(url)\n",
-    "        response.raise_for_status()\n",
-    "        station_data = pd.read_csv(StringIO(response.text), skiprows=24, skipinitialspace=True)\n",
-    "        \n",
-    "        # Save to CSV in the Data folder with station name and ID in the filename\n",
-    "        file_path = os.path.join(data_folder, f\"{station_name}_station_{station_id}.csv\")\n",
-    "        station_data.to_csv(file_path, index=False)\n",
-    "    \n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error fetching data for station {station_name} (ID: {station_id}): {e}\")\n"
    ]
   },
   {
@@ -246,66 +146,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the columns of interest\n",
-    "columns_of_interest = ['date', 'maxtp', 'mintp', 'rain', 'cbl', 'wdsp', 'hm', 'ddhm', 'hg']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "After selecting the relevant columns, the data was combined into a single file, with additional columns added for the station name and its ID."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All data saved to All_stations_data.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Reverse the dictionary for quick lookup\n",
-    "station_ids_to_names = {v: k for k, v in stations.items()}\n",
-    "\n",
-    "# Output file path\n",
-    "output_file = \"All_stations_data.csv\"\n",
-    "\n",
-    "# Initialize an empty list for combined data\n",
-    "combined_data = []\n",
-    "\n",
-    "# Loop through all files in the folder\n",
-    "for file_name in os.listdir(data_folder):\n",
-    "    try:\n",
-    "        # Extract station ID from the file name\n",
-    "        station_id = int(file_name.split('_')[-1].split('.')[0])\n",
-    "        station_name = station_ids_to_names.get(station_id, \"Unknown\")\n",
-    "        \n",
-    "        # Read the data and add columns\n",
-    "        file_path = os.path.join(data_folder, file_name)\n",
-    "        station_data = pd.read_csv(file_path)[columns_of_interest]\n",
-    "        station_data[\"Station_ID\"] = station_id\n",
-    "        station_data[\"Station_Name\"] = station_name\n",
-    "        \n",
-    "        # Add the data to the combined list\n",
-    "        combined_data.append(station_data)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error processing file {file_name}: {e}\")\n",
-    "\n",
-    "# Combine and save the final DataFrame\n",
-    "pd.concat(combined_data, ignore_index=True).to_csv(output_file, index=False)\n",
-    "print(f\"All data saved to {output_file}\")\n"
    ]
   },
   {
@@ -317,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +289,7 @@
        "4      Athenry  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +560,7 @@
        "4        1875      Athenry  2010  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +704,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +801,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +906,7 @@
        "Text(0.5, 1.02, 'Monthly Mean Wind Speed Across Stations')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1125,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1244,6 +1088,74 @@
     "\n",
     "# Show\n",
     "print(seasonal_wind_speed_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Station Name: Malin Head\n",
+      "\n",
+      "Data Period: From 1955-05-01 to 2024-11-30\n",
+      "\n",
+      "Dataset Overview:\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 25417 entries, 0 to 25416\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column    Non-Null Count  Dtype         \n",
+      "---  ------    --------------  -----         \n",
+      " 0   date      25417 non-null  datetime64[ns]\n",
+      " 1   maxtp     25417 non-null  float64       \n",
+      " 2   mintp     25417 non-null  float64       \n",
+      " 3   rain      25417 non-null  float64       \n",
+      " 4   cbl       25417 non-null  float64       \n",
+      " 5   wdsp_mps  25414 non-null  float64       \n",
+      " 6   hm        25337 non-null  float64       \n",
+      " 7   ddhm      25337 non-null  float64       \n",
+      " 8   hg        25337 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(8)\n",
+      "memory usage: 1.7 MB\n",
+      "\n",
+      "SUMMARY:\n",
+      "------------------------------\n",
+      "              maxtp         mintp          rain           cbl      wdsp_mps\n",
+      "count  25417.000000  25417.000000  25417.000000  25417.000000  25414.000000\n",
+      "mean      12.128717      7.252481      2.992769   1008.928394      7.824261\n",
+      "std        3.993466      3.850467      4.642094     12.484083      3.340544\n",
+      "min       -0.800000     -6.200000      0.000000    953.600000      0.102889\n",
+      "25%        9.100000      4.300000      0.000000   1001.200000      5.350218\n",
+      "50%       12.000000      7.400000      1.000000   1009.900000      7.510882\n",
+      "75%       15.100000     10.400000      4.200000   1017.800000      9.980214\n",
+      "max       27.100000     18.400000     80.600000   1046.400000     23.047091\n",
+      "\n",
+      "First Rows:\n",
+      "\n",
+      "        date  maxtp  mintp  rain    cbl   wdsp_mps    hm   ddhm    hg\n",
+      "0 1955-05-01    9.4    6.9   7.4  996.2   9.877325  34.0   70.0  48.0\n",
+      "1 1955-05-02   11.2    5.7   0.0  997.1   7.305105  24.0  310.0  31.0\n",
+      "2 1955-05-03   13.1    4.3   6.6  989.6   7.613771  30.0  130.0  48.0\n",
+      "3 1955-05-04   12.8    7.8   4.4  978.3  10.237436  27.0  230.0  41.0\n",
+      "4 1955-05-05   13.2    8.1   2.7  990.3   8.231104  24.0  240.0  34.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from analysis_by_station import StationProcessor\n",
+    "\n",
+    "file_path = './Data/Malin Head_station_1575.csv'\n",
+    "columns_of_interest = ['date', 'maxtp', 'mintp', 'rain', 'cbl', 'wdsp', 'hm', 'ddhm', 'hg']\n",
+    "\n",
+    "# Create an instance of the StationProcessor\n",
+    "processor = StationProcessor(file_path, columns_of_interest)\n",
+    "\n",
+    "# Run \n",
+    "processed_data = processor.run()\n"
    ]
   },
   {
