Project: conclusions, references, file requirements.txt added

--- a/project/Wind_analisys.ipynb
+++ b/project/Wind_analisys.ipynb
@@ -1578,7 +1578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time-Series Forecasting"
+    "## Time-series Forecasting"
    ]
   },
   {
@@ -2240,7 +2240,59 @@
    "metadata": {},
    "source": [
     "***\n",
-    "\n"
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "In this project I have analysed historical wind speed data to assess the prospectivity of installing wind farms within Ireland. The study aimed to identify monthly and seasonal variations in wind speed, predict future trends and calculate the potential for wind energy. The following is a brief description of the work undertaken, the findings and possible areas for further analysis.\n",
+    "\n",
+    "**Selection of Data for Analysis**:\n",
+    "Historical wind speed data was obtained from Met Éireann. The dataset was cleaned, normalized, and prepared to ensure the accuracy and reliability of the analysis.\n",
+    "\n",
+    "**Exploratory Analysis of the Dataset**:\n",
+    "An exploratory analysis was conducted to understand key attributes such as average wind speed, missing data patterns, and station-specific characteristics.\n",
+    "\n",
+    "**Monthly Fluctuations**:\n",
+    "Wind speed fluctuations were analyzed on a monthly basis for each station, using daily average wind speed. A comparative analysis was conducted on a station-by-station basis to identify trends in the distribution of wind speed variables.\n",
+    "\n",
+    "**Seasonal Fluctuations**:\n",
+    "Seasonal wind speed fluctuations were analyzed to validate the results obtained from the monthly comparative analysis and to gain a deeper understanding of wind speed distribution across seasons.\n",
+    "\n",
+    "**Analysis by Station**:\n",
+    "Based on the overall analysis of all stations, Malin Head was selected to demonstrate wind power calculations using a specific wind turbine model and to test prediction models. The station data was prepared for further analyses.\n",
+    "\n",
+    "**Calculation of Wind Power Output**:\n",
+    "Based on the specifications of the Siemens SWT-3.2-113 turbine, the potential wind power output at each station was calculated. This provided valuable insights into the power generation potential at different locations.\n",
+    "\n",
+    "**Time-Series Forecasting**:\n",
+    "Models such as SARIMAX, ARIMA, and Holt-Winters were applied to predict future wind speed trends and assess the long-term viability of wind farm operations. A linear regression model was tested and found unsuitable for time series prediction.\n",
+    "\n",
+    "The analysis identified Ireland's western and coastal regions as ideal for wind farm installations due to consistently high wind speeds, with winter months offering peak energy potential. Using Siemens SWT-3.2-113 turbines, significant power output was demonstrated, especially where wind speeds exceed 3 m/s. Seasonal patterns and geographic location were key factors influencing viability, while forecasting model confirmed the long-term reliability of wind resources for energy generation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## References: \n",
+    "\n",
+    "1. [Renewable energy](https://en.wikipedia.org/wiki/Renewable_energy)\n",
+    "2. [Wind power in Ireland](https://en.wikipedia.org/wiki/Wind_power_in_Ireland)\n",
+    "3. [windenergyireland_interactive map](https://windenergyireland.com/about-wind/interactve-map)\n",
+    "4. [Wind turbine](https://en.wikipedia.org/wiki/Wind_turbine)\n",
+    "5. [How Wind Power Works](https://science.howstuffworks.com/environmental/green-science/wind-power.htm)\n",
+    "6. [Knot (unit)](https://en.wikipedia.org/wiki/Knot_(unit))\n",
+    "7. [Alternative energy tutorials](https://www.alternative-energy-tutorials.com/category/wind-energy)\n",
+    "8. [Advice on automating datamining with Python](https://stackoverflow.com/questions/41739786/advice-on-automating-datamining-with-python)\n",
+    "9. [Python class design for data processing](https://stackoverflow.com/questions/64739329/python-class-design-for-data-processing)\n",
+    "10. [Python Design Pattern: using class attributes to store data vs. local function variables](https://stackoverflow.com/questions/55706215/python-design-pattern-using-class-attributes-to-store-data-vs-local-function-v)\n",
+    "11. [List of wind farms in the Republic of Ireland](https://en.wikipedia.org/wiki/List_of_wind_farms_in_the_Republic_of_Ireland)\n",
+    "12. [Wind Power Analysis for a Horizontal Axis Wind Turbine with Python](https://www.linkedin.com/pulse/wind-power-analysis-horizontal-axis-turbine-python-ivan-defaz-jselc/)\n",
+    "13. [Wind Energy Simplified: From Basics to Advanced Power Calculation with Complete Python Code](https://medium.com/@thebinayak/wind-energy-simplified-from-basics-to-advanced-power-calculation-with-complete-python-code-4d3ec3cb0023)\n",
+    "14. [11 Classical Time Series Forecasting Methods in Python (Cheat Sheet)](https://machinelearningmastery.com/time-series-forecasting-methods-in-python-cheat-sheet/)\n",
+    "15. [Comprehensive Guide to Time Series Data Analytics and Forecasting with Python](https://medium.com/@nomannayeem/comprehensive-guide-to-time-series-data-analytics-and-forecasting-with-python-2c82de2c8517)\n",
+    "16. [A Guide to Time Series Forecasting in Python](https://builtin.com/data-science/time-series-forecasting-python)"
    ]
   },
   {
